logs/rtt.20260325-081437.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS)
error[E0405]: cannot find trait `ClonePreservesView` in this scope
  --> src/Chap65/UnionFindStEph.rs:36:47
   |
36 |     pub struct UnionFindStEph<V: StT + Hash + ClonePreservesView> {
   |                                               ^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
14 +     use crate::vstdplus::clone_view::clone_view::ClonePreservesView;
   |

error[E0405]: cannot find trait `ClonePreservesView` in this scope
  --> src/Chap65/UnionFindStEph.rs:52:26
   |
52 |     impl<V: StT + Hash + ClonePreservesView> View for UnionFindStEph<V> {
   |                          ^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
14 +     use crate::vstdplus::clone_view::clone_view::ClonePreservesView;
   |

error[E0405]: cannot find trait `ClonePreservesView` in this scope
  --> src/Chap65/UnionFindStEph.rs:70:51
   |
70 |     pub trait UnionFindStEphTrait<V: StT + Hash + ClonePreservesView>: Sized + View<V = UnionFindStEphV<V>> {
   |                                                   ^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
14 +     use crate::vstdplus::clone_view::clone_view::ClonePreservesView;
   |

error[E0405]: cannot find trait `ClonePreservesView` in this scope
   --> src/Chap65/UnionFindStEph.rs:162:26
    |
162 |     impl<V: StT + Hash + ClonePreservesView> UnionFindStEphTrait<V> for UnionFindStEph<V> {
    |                          ^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 14 +     use crate::vstdplus::clone_view::clone_view::ClonePreservesView;
    |

For more information about this error, try `rustc --explain E0405`.
error: could not compile `apas-verus` (lib) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 4 previous errors
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 7s
